--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.7
   - geopandas
@@ -16,3 +17,4 @@ dependencies:
   - adjustText
   - tkinter
   - matplotlib-scalebar
+  
